--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16.x'  
+          node-version: '20.11.1'  
 
       - name: Install dependencies and ESLint
         run: |
@@ -25,4 +25,4 @@ jobs:
           npm install eslint 
       - name: Run Jest tests and linting
         run: |
-          npm run lint && npm test
+          npm run lint && jest
