--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,4 +26,4 @@ jobs:
           npm i eslint-plugin-jest  
       - name: Run Jest tests and linting
         run: |
-          npm run lint && npm test
+           npm test
